Fixed incompleted row spacing problem

--- a/styles.css
+++ b/styles.css
@@ -91,11 +91,11 @@ main {
 
     padding: 30px;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
+    justify-content: flex-start;
 }
-
 
 /* CSS for Book Cards (found in JS code) */
 .book-card {
@@ -108,6 +108,10 @@ main {
     background-color: rgb(235, 234, 220);
 
     padding: 20px 30px;
+
+    flex: 1 1 250px;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .book-read {
